Removes metadata parsing from GuideUtils and implements code suggestions. (#1553)