@@ -1,19 +1,10 @@
 package io.micronaut.guides.core;
 
-import com.networknt.schema.InputFormat;
-import com.networknt.schema.JsonSchema;
-import com.networknt.schema.ValidationMessage;
-import groovy.json.JsonSlurper;
-import io.micronaut.json.JsonMapper;
 import io.micronaut.starter.options.BuildTool;
 import io.micronaut.starter.options.Language;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -27,96 +18,6 @@ public final class GuideUtils {
     private static final String FEATURE_SPOTLESS = "spotless";
 
     private GuideUtils() {
-    }
-
-    public static List<Guide> parseGuidesMetadata(File guidesDir,
-                                                  String metadataConfigName,
-                                                  JsonSchema schema,
-                                                  JsonMapper jsonMapper) throws Exception {
-        List<Guide> metadatas = new ArrayList<>();
-
-        for (File dir : guidesDir.listFiles(File::isDirectory)) {
-            parseGuideMetadata(dir, metadataConfigName, schema, jsonMapper).ifPresent(metadatas::add);
-        }
-
-        mergeMetadataList(metadatas);
-
-        return metadatas;
-    }
-
-    static Optional<Guide> parseGuideMetadata(File dir, String metadataConfigName,
-                                              JsonSchema schema,
-                                              JsonMapper jsonMapper) throws Exception {
-        File configFile = new File(dir, metadataConfigName);
-        if (!configFile.exists()) {
-            LOG.warn("metadata file not found for {}", dir.getName());
-            return Optional.empty();
-        }
-
-        String content;
-        try {
-            content = Files.readString(Paths.get(configFile.toString()));
-        } catch (IOException e) {
-            LOG.warn("metadata file not found for {}", dir.getName());
-            return Optional.empty();
-        }
-
-        Map<String, Object> config = (Map<String, Object>) new JsonSlurper().parse(configFile);
-        boolean publish = config.get("publish") == null || (Boolean) config.get("publish");
-
-        if (publish) {
-            Set<ValidationMessage> assertions = schema.validate(content, InputFormat.JSON);
-
-            if (!assertions.isEmpty()) {
-                throw new Exception("Guide metadata " + configFile + " does not validate the JSON Schema" + assertions);
-            }
-        }
-
-        Guide raw = jsonMapper.readValue(content, Guide.class);
-
-        List<App> apps = new LinkedList<>();
-
-        for (App app : raw.apps()) {
-            apps.add(new App(
-                    app.name(),
-                    app.packageName(),
-                    app.applicationType(),
-                    app.framework(),
-                    app.features() != null ? app.features() : new ArrayList<>(),
-                    app.invisibleFeatures() != null ? app.invisibleFeatures() : new ArrayList<>(),
-                    app.kotlinFeatures() != null ? app.kotlinFeatures() : new ArrayList<>(),
-                    app.javaFeatures() != null ? app.javaFeatures() : new ArrayList<>(),
-                    app.groovyFeatures() != null ? app.groovyFeatures() : new ArrayList<>(),
-                    app.testFramework(),
-                    app.excludeTest(),
-                    app.excludeSource(),
-                    app.validateLicense()
-            ));
-        }
-
-        return Optional.of(new Guide(
-                raw.title(),
-                raw.intro(),
-                raw.authors(),
-                raw.categories(),
-                publish ? raw.publicationDate() : null,
-                raw.minimumJavaVersion(),
-                raw.maximumJavaVersion(),
-                raw.cloud(),
-                raw.skipGradleTests(),
-                raw.skipMavenTests(),
-                publish ? dir.getName() + ".adoc" : null,
-                raw.languages() != null ? raw.languages() : List.of(Language.JAVA, Language.GROOVY, Language.KOTLIN),
-                raw.tags() != null ? raw.tags() : Collections.emptyList(),
-                raw.buildTools() != null ? raw.buildTools() : List.of(BuildTool.GRADLE, BuildTool.MAVEN),
-                raw.testFramework(),
-                raw.zipIncludes() != null ? raw.zipIncludes() : new ArrayList<>(),
-                dir.getName(),
-                publish,
-                raw.base(),
-                raw.env() != null ? raw.env() : new HashMap<>(),
-                apps
-        ));
     }
 
     public static List<String> getTags(Guide guide) {
@@ -142,7 +43,7 @@ public final class GuideUtils {
         }
         Set<String> categoriesAsTags = guide.categories().stream().map(String::toLowerCase).map(s -> s.replace(" ", "-")).collect(Collectors.toSet());
         tagsList.addAll(categoriesAsTags);
-        return tagsList.stream().collect(Collectors.toList());
+        return new ArrayList<>(tagsList);
     }
 
     public static List<String> getAppFeatures(App app, Language language) {
@@ -192,11 +93,11 @@ public final class GuideUtils {
     }
 
     public static Set<String> getFrameworks(Guide guide) {
-        return guide.apps().stream().map(it -> it.framework()).collect(Collectors.toSet());
+        return guide.apps().stream().map(App::framework).collect(Collectors.toSet());
     }
 
     public static Guide merge(Guide base, Guide guide) {
-        Guide merged = new Guide(
+        return new Guide(
                 guide.title() == null ? base.title() : guide.title(),
                 guide.intro() == null ? base.intro() : guide.intro(),
                 mergeLists(base.authors(), guide.authors()),
@@ -219,7 +120,6 @@ public final class GuideUtils {
                 guide.env() == null ? base.env() : guide.env(),
                 mergeApps(base.apps(), guide.apps())
         );
-        return merged;
     }
 
     private static List<App> mergeApps(List<App> base, List<App> guide) {
@@ -241,10 +141,10 @@ public final class GuideUtils {
         List<App> merged = new ArrayList<>();
         merged.addAll(baseOnly.stream()
                 .map(baseApps::get)
-                .collect(Collectors.toList()));
+                .toList());
         merged.addAll(guideOnly.stream()
                 .map(guideApps::get)
-                .collect(Collectors.toList()));
+                .toList());
 
         for (String name : inBoth) {
             App baseApp = baseApps.get(name);
